Corrected aria-label typo.

--- a/landmarks.html
+++ b/landmarks.html
@@ -41,7 +41,7 @@
         </div>
         <div id="contentwrapper">
             <div id="lrg_content">
-                <div id="leftcolumn" role="navigation" aria-label="Networking list and People nline">
+                <div id="leftcolumn" role="navigation" aria-label="Networking list and People Online">
                     <a id="menu"></a>
                     <div id="side-menu" aria-label="left side menu" accesskey="0">
                         <br/>
