Adding role=status to message div.

--- a/landmarks.html
+++ b/landmarks.html
@@ -67,7 +67,7 @@
             </div>
             <!-- //end of the lrg_content -->
             <div id="contentcolumn">
-                <div id="message"></div>
+                <div id="message" role="status"></div>
                 <br style="clear:both;">
                 <a id="top"></a>
                 <div class="profile" role="main">
