--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Misc Other Files</h1>
         <ul>
             <li><a href="keyboardInteractionDemoWithCounterAdded.html">Keyboard Interactions (with event counter added)</a> </li>
-            <li><a href="suggestGail.html">Suggestion Box</a></li>
+            <li><a href="suggestGail.html">Suggestion Box- JQuery autocomplete version</a></li>
         </ul>
     </main>
 </body>
