--- a/suggestGail.html
+++ b/suggestGail.html
@@ -13,32 +13,9 @@
     <script src="assets/countries.js"></script>
     <script>
         $(function() {
-            var availableTags = [
-                "ActionScript",
-                "AppleScript",
-                "Asp",
-                "BASIC",
-                "C",
-                "C++",
-                "Clojure",
-                "COBOL",
-                "ColdFusion",
-                "Erlang",
-                "Fortran",
-                "Groovy",
-                "Haskell",
-                "Java",
-                "JavaScript",
-                "Lisp",
-                "Perl",
-                "PHP",
-                "Python",
-                "Ruby",
-                "Scala",
-                "Scheme"
-            ];
             $("#country").autocomplete({
-                source: availableTags
+                min_length: 1,
+                source: countries
             });
         });
     </script>
