Jquery autocomplete version of Activity 5 (can't be used to turn in Activity 5

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         </ul>
         <h1>Misc Other Files</h1>
         <ul>
+            <li><a href="alertAndDialogGP.html">Alert example</a></li>
             <li><a href="keyboardInteractionDemoWithCounterAdded.html">Keyboard Interactions (with event counter added)</a> </li>
-            <li><a href="suggestGail.html">Suggestion Box- JQuery autocomplete version</a></li>
+            <li><a href="suggestWithJQueryAutocomplete.html">Suggestion Box- JQuery autocomplete version</a></li>
         </ul>
     </main>
 </body>
