modified link info on misc file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul>
             <li><a href="keyboardInteractionDemoWithCounterAdded.html">Keyboard Interactions (with event counter added)</a> </li>
             <li><a href="suggestWithJQueryAutocomplete.html">Suggestion Box- JQuery autocomplete version</a>
-                <li><a href="tooltipForNVDA.html">Tooltip widget - modified to work with NVDA</a></li>
+                <li><a href="tooltipForNVDA.html">Tooltip widget - doesn't yet work with NVDA</a></li>
         </ul>
     </main>
 </body>
