Starting a new file to play with some simple button examples.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="keyboardInteractionDemoWithCounterAdded.html">Keyboard Interactions (with event counter added)</a> </li>
             <li><a href="suggestWithJQueryAutocomplete.html">Suggestion Box- JQuery autocomplete version</a>
                 <li><a href="tooltipForNVDA.html">Tooltip widget - doesn't yet work with NVDA</a></li>
+                <li><a href="gp_buttons.html">Buttons - Playing around with simpler examples.</a></li>
         </ul>
     </main>
 </body>
